# nbdev_test

./: README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbdev_test/: _modidx.py
nbs/: index.ipynb  nbdev.yml
